--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node build/server.js",
+    "start": "node dist/server.js",
     "dev": "tsnd --exit-child src/server.ts"
   },
   "keywords": [],
